# fullstack-template

./: .env.example  .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.extend.yml
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py  todos.py
backend/app/api/schemas/: todo.py
backend/app/core/: auth.py  logging.py
backend/app/domain/entities/: todo.py
backend/app/domain/repositories/: todo_repository.py
backend/app/domain/value_objects/: todo_status.py
backend/app/infrastructure/: database.py
backend/app/infrastructure/models/: todo.py
backend/app/infrastructure/repositories/: todo_repository_impl.py
backend/app/usecase/: todo_usecases.py
backend/tests/: conftest.py  test_todo_usecases.py
backend/training_todo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md  DEPLOY.md  LEARNING_PATH.md  SETUP.md
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthGuard.tsx
frontend/src/features/todos/: api.ts  hooks.ts  types.ts
frontend/src/features/todos/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/lib/: apiClient.ts  authConfig.ts
frontend/tests/: TodoItem.test.tsx
infra/: .gitignore  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: auth-stack.ts  backend-stack.ts  database-stack.ts  frontend-stack.ts  network-stack.ts
